# lce

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml
artifacts/: ambient-ai-scribes-in-healthcare-checklist.md  ambient-ai-scribes-in-healthcare-operations.md
docs/: 00-project-overview.md  01-architecture-rules.md  01-global-architecture-rules.md  02-day-1-bootstrap.md  03-bounded-contexts.md  04-event-contracts.md  05-data-persistence-rules.md  10-phase-1-foundation-persistence.md  11-phase-1-acceptance-criteria.md  12-phase-1-deliverables.md  13-phase-1-event-and-data-rules.md  20-phase-2-core-agentic-engine.md  21-phase-2-acceptance-criteria.md  22-phase-2-deliverables.md  23-phase-2-worker-and-flow-rules.md  24-phase-2-event-contracts.md  30-phase-3-market-semantic-intelligence.md  31-phase-3-acceptance-criteria.md  32-phase-3-deliverables.md  33-phase-3-market-rules.md  34-phase-3-planning-rules.md  35-phase-3-event-contracts.md  36-phase-3-stub-to-live-rules.md  90-future-phases-summary.md  event-contracts.md  market-intelligence.md
scripts/: bootstrap-and-test-background.sh  ci-dev-setup.sh  (+4 more)
workers/ai-engine/: AGENTS.md  pyproject.toml
workers/ai-engine/src/ai_engine/: __init__.py  agents.py  config.py  consumer.py  dataforseo.py  db.py  flow.py  handler.py  llm.py  main.py  models.py  runtime.py
workers/ai-engine/src/lce_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/ai-engine/tests/: test_dataforseo_adapter.py  test_market_modes.py  test_market_scoring_pipeline.py  test_phase35_enrichment.py
(+18 files in other folders)
