[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lce-ai-engine"
version = "0.1.0"
description = "Phase 2 AI worker for LCE"
requires-python = ">=3.11"
dependencies = [
  "crewai>=1.0.0,<2.0.0",
  "litellm>=1.79.0,<2.0.0",
  "pika>=1.3.2,<2.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "SQLAlchemy>=2.0.40,<3.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
